<resources>
    <string name="app_name">prova1</string>
    <string name="escola_a_moeda_que_deseja_converter">Escola a moeda que deseja converter</string>
    <string name="preencha_com_o_valor_a_ser_convertido">Preencha com o valor a ser convertido</string>
    <string name="dolar">Dolar</string>
    <string name="euro">Euro</string>
    <string name="rublo">Rublo</string>
    <string name="dirr">Dirrã</string>
    <string name="rupia">Rupia</string>
    <string name="iene">Iene</string>
    <string name="convers_o_em">Conversão em</string>
    <string name="convers_o_em_dolar">Conversão em Dolar</string>
    <string name="convers_o_em_euro">Conversão em Euro</string>
    <string name="convers_o_em_rublo">Conversão em Rublo</string>
    <string name="convers_o_em_dirra">Conversão em Dirrã</string>
    <string name="convers_o_em_iene">Conversão em Iene</string>
    <string name="convers_o_em_rupia">Conversão em Rupia</string>
</resources>